# flexon

./: Cargo.toml  README.md
benches/: parse.rs
benchmark/: Cargo.toml
benchmark/benches/: deserialize_struct.rs  deserialize_value.rs  get_from.rs  get_lazy.rs
benchmark/src/: canada.rs  citm_catalog.rs  github_events.rs  lib.rs  twitter.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  parse_at.rs  parse_at_unchecked.rs  parse_unchecked.rs
fuzz/src/: lib.rs
src/: comment.rs  config.rs  error.rs  find_comment.rs  lib.rs  metadata.rs  misc.rs  parser.rs  pointer.rs  simd.rs  span.rs  utf8.rs
src/fast_float/: binary.rs  common.rs  decimal.rs  float.rs  mod.rs  number.rs  simple.rs  table.rs
src/parser/: mod.rs  skip.rs  skip_to.rs  unchecked.rs
src/serde/: borrowed.rs  de.rs  error.rs  format.rs  mod.rs  number.rs  ser.rs  span.rs  unchecked.rs  value.rs
src/source/: mod.rs  null_padded.rs  reader.rs  slice.rs
src/span/: mod.rs  value.rs
src/value/: array.rs  builder.rs  index.rs  misc.rs  mod.rs  number.rs  object.rs  serde_json.rs
src/value/borrowed/: mod.rs  string.rs
src/value/lazy/: array.rs  dummy.rs  mod.rs  object.rs
src/value/owned/: mod.rs  string.rs
