[package]
name = "flexon"
version = "0.3.5"
edition = "2024"
description = "Yet another JSON parser"
repository = "https://github.com/cyruspyre/flexon"
license = "MIT"
exclude = ["benches/", "data/", ".gitignore"]
categories = ["parser-implementations", "parsing"]
keywords = ["json", "parser", "span"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.7.0"

[lib]
bench = false

[[bench]]
name = "parse"
harness = false

[features]
default = ["prealloc"]
span = []
comment = []
prealloc = []
line-count = ["comment", "span"]
serde-json = ["serde_json"]

[dependencies]
serde_json = { version = "1.0.145", optional = true }
fast-float2 = "0.2.3"
memchr = "2.7.6"
