[package]
name = "flexon"
version = "0.4.6"
edition = "2024"
description = "SIMD accelerated JSON parser"
repository = "https://github.com/cyruspyre/flexon"
license = "MIT"
exclude = ["benchmark/", ".gitignore"]
categories = ["encoding", "parser-implementations"]
keywords = ["simd", "json", "parser", "span", "comment"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serde", "runtime-detection"]
alloc = ["serde_core?/alloc"]
nightly = []
simd = []
span = []
comment = ["alloc"]
prealloc = ["alloc"]
std = ["alloc", "serde_core?/std", "simdutf8/std"]
runtime-detection = ["simd", "std"]
serde = ["dep:serde_core", "dep:zmij", "dep:itoa"]

[dependencies]
serde_core = { version = "1.0", optional = true, default-features = false }
zmij = { version = "1.0", optional = true }
itoa = { version = "1.0", optional = true }
simdutf8 = { version = "0.1", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
