[package]
name = "flexon-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
flexon = { path = ".." }
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_unchecked"
path = "fuzz_targets/parse_unchecked.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_at"
path = "fuzz_targets/parse_at.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_at_unchecked"
path = "fuzz_targets/parse_at_unchecked.rs"
test = false
doc = false
bench = false
